--- a/coc-settings.json
+++ b/coc-settings.json
@@ -1,6 +1,8 @@
 {
   "coc.preferences.jumpCommand": "vsplit",
   "diagnostic.checkCurrentLine": true,
+  "diagnostic.virtualTextCurrentLineOnly": false,
+  "diagnostic.virtualText": true,
   "python.formatting.provider": "black",
   "python.linting.enabled": false,
   "translator.toLang": "en",
