--- a/coc-settings.json
+++ b/coc-settings.json
@@ -22,5 +22,6 @@
   "javascript.format.insertSpaceAfterOpeningAndBeforeClosingNonemptyBraces": true,
   "html.filetypes": ["html", "handlebars", "htmldjango", "blade"],
   "html.format.enable": true,
-  "coc.preferences.extensionUpdateCheck": "daily"
+  "coc.preferences.extensionUpdateCheck": "daily",
+  "snippets.ultisnips.pythonPrompt": false
 }
